--- a/languages/cnrswebkit-fr_FR.po
+++ b/languages/cnrswebkit-fr_FR.po
@@ -675,7 +675,7 @@ msgid "Browse \"all events\" page"
 msgstr ""
 
 #: templates/template actualite.php:34
-msgid "There is currently no news in the list"
+msgid "There is currently no news in the present list"
 msgstr "Il n' y a aucune actualité publiée dans cette liste"
 
 #: templates/template emploi.php:33
