--- a/languages/cnrswebkit-fr_FR.po
+++ b/languages/cnrswebkit-fr_FR.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: CNRS Web Kit 1.3\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/cnrswebkit\n"
 "POT-Creation-Date: 2019-04-17 06:16:14+00:00\n"
-"PO-Revision-Date: 2019-04-17 08:49+0200\n"
+"PO-Revision-Date: 2019-05-09 12:53+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -596,7 +596,7 @@ msgstr ""
 
 #: loops/loop-contact.php:27
 msgid "Contact this person"
-msgstr "Contacter cete personne"
+msgstr "Contacter cette personne"
 
 #: loops/loop-emploi.php:28 template-parts/content-emploi.php:35
 msgid "Download recruitment offer"
