webkit debug-19 : dynamic css  imprived, now compatibl with WP_customizer and theme preview

--- a/languages/cnrswebkit-fr_FR.po
+++ b/languages/cnrswebkit-fr_FR.po
@@ -323,7 +323,7 @@ msgstr "Schéma colorimétrique"
 
 #: inc/customizer.php:143
 msgid "Page Background Color"
-msgstr "Couleur de fond"
+msgstr "Couleur de fond de page"
 
 #: inc/customizer.php:158
 msgid "Link Color"
